added docs for chatroom handlers
